--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Tvu8BmM3,iv:b+a6JPKY6jYYmdO4EyOS+ZDlHFPlSd3HQib8nJ+AsWs=,tag:pHE6OHk1OWoCcdOPr7NxsA==,type:str]
-ansible_user: ENC[AES256_GCM,data:qmQppSq9,iv:EhR+THn7bdclDU5stN0ZbiuAuzdm/hzhBHbdNBTgOLU=,tag:KK3YNSpADkzsnIfpAHqVlg==,type:str]
+kind: ENC[AES256_GCM,data:gN/hlGdl,iv:frDsF46BQzPNfBVygfI8S4FiTTWrOvmPCRJzGgPwBWQ=,tag:GB0FLQMF+YTxz0ZKyGSo2A==,type:str]
+ansible_user: ENC[AES256_GCM,data:pWBXPCIr,iv:7VssM5P7QpMX9nDbbXPmMM4FbbQ23H3yuDXmXx78RWU=,tag:EpTidDUTJEFsez9/5ynGYQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6dzJXTVVBaGVWZTVyUTB1
-            NzBlaEl0NjJNcnJNbUdyUFJ4cmpIUUtub0V3CitFY1BYUHJoYnluU1F2MktnMkds
-            cUJyVnZUV2I2MWZiM29GOWtUdEM0Qm8KLS0tIFJNaUdZTnVxYjJRanBmNTVvSDg4
-            OXlKdi9kOERHcndnMUpLTjArZzQrR1UK74dP57QLgmdLRTQhwhO560cU58//ecOU
-            fhx0Q7T4K61HM/K9VYwapBxKsAxWF1Pn8Ce6dT3PExmDPmfKPQGQoQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxSFlVaHA0VTdCbHU2OXpr
+            Y1A5a0pZZnJ3MCt3aytiLzlXUWxkWEpGeVVzCm5oUWxtdEMxVm5TSDc2UDk1V0F6
+            VkZ3NDRhVGRuMGVEUzQzRkJXdG1CK28KLS0tIGJCUnh5ODk5RnVGYTJMVUNXalpM
+            Zk1qWng0bVdnME1hNTNzTlFVTXNDUlUKv3epNZgCOSGtJgJdJYPjSuu0FraxyI2V
+            v93wkeHc7DrKS2gtFESIO24wZUj174y84j02mOtANaneyQSkjntheA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-14T04:19:11Z"
-    mac: ENC[AES256_GCM,data:O8rD/WCq1+OafdCqww+q3a90RuMf0ekZe6Xd0d6tolvhZFX+KHvozlodVp3dIRoR5Bf6cx0lKt07iSSDQ81r4CLAUgzwsWbyfIh6kIn1b4KELgbvipIs3JhzErKIyi4vgfOJjQtS0ScpQ6uHG/JR5YNYrYmWyaKCXIVAAq/wzmE=,iv:087jZ3V7j8LuodTxUbS0fRuEpufb7keaLiQ8FHL4n7U=,tag:wt0LACtr5zQaQlRLypex+Q==,type:str]
+    lastmodified: "2023-02-17T00:49:47Z"
+    mac: ENC[AES256_GCM,data:VrKMLGD+icUJV+ZbGAv6XYpku8GDac/nw+u48XpEKM6gLdQn8f//9nkHFvpJlZu2n426n3D4JbGTYz4zJXVWG1Lhj8v5NJqDYsIPMNfEYmqJ4IoBk3P8ERFb/Bc4mEoSd/f56G4d67BrsgmlCwzLugLoZn5L0uq8tUEUxL55Wkc=,iv:Evq6DhR1u6+zshCqzzraxnSlcd/Ue1oxjQa2mM9PKrY=,tag:LVyPEgc2rra45ZTu+LXFtw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
