--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:GgAmJ3ps,iv:X9yVUEFRPUz41jYZGxyVBSEk2A4BxU4zEgWE2ebcz2w=,tag:f634wRcZtzmBysy8xhTEow==,type:str]
-ansible_user: ENC[AES256_GCM,data:n4B1pXIO,iv:g+tT6iPU8qV33aHM4iayZ0BI31mwBpaZ55gWAVkAByM=,tag:geJNGChCVZNFQblyTFt9Ig==,type:str]
+kind: ENC[AES256_GCM,data:6OX3wMH2,iv:UCrZvXE7fBtf6mUV87aQhYiZi/vmoAmTd/5omwaFqxg=,tag:xNJZzHo+SkahodOR3MJKzA==,type:str]
+ansible_user: ENC[AES256_GCM,data:wvSqCJQT,iv:tSupQnxDjmyVI9KDgoNp3ykEQyQrK5iJQ1alRaXlNSE=,tag:QGmHwfwywcjHiSB5oiTDEg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6L2F6cnR2ZmdReUlBRWVr
-            OEVsWUd1MmhhZExTdVJjWDlaU2NNa1pzZTI4ClM4YjVnbWFSclpaL2lqdmVCZWY3
-            eEJJZnlhY0NpWG9yV05RbHZTZGUvVzQKLS0tIDNWeVlJTGJZMlNUemxGUGlCTVlK
-            U0hCVm9VMEZxWnpGUHAyN0o5K1R3UzAKTuRFbtTquvfkKS3SnN0K5ihOhNWlG2bQ
-            aL4aJL7oXhiDPWYdnvFBMLKgJA1tKPasU/EnszZGEZTppoZChYBwxg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArN0hTWEhVanAzZnhaVWFw
+            Vy9Pd3o3RmNmcVRnSVJzQVVTVG8zR1F6T3o0CmUveFhYNk5WdWhyRjgyQ0E3RTUx
+            ZXpvTWlLN0lkRVgwV1pDMldvMlhXQWsKLS0tIHlhYWtobFVaM05aRWVDSnlYM0p5
+            ZVVQVnUweFNpU0pnMXJLQVdMNnlJRGMK8d/fXQK6wloZHOwXYaiCKLBUkzgQeUOZ
+            apF5+QK2lV9LNP90bg5dzZaDb1HVS6hhK2Hvt+nWZe0/rXbx1ztcIA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-14T04:19:11Z"
-    mac: ENC[AES256_GCM,data:BsQoKakfMV3C6Q/uEX2lKYadF1nf6UYDVzjRE3CDV4ntOOBWAhJ/HYnms09csXWjVG35YqOL6lpmFR4oeBGsTp6XGksZwXyk6vzM6pUE5J6oORcKTsPgA6LkhtCxdDKiVsdzwAI9IJv6Q66fvxeAedkelr7TqNrbmpBvIv3OfDg=,iv:pF8iJ8aGOvyp5oEhE1JNZTNen7kCOvc9fDfhkRG2WMY=,tag:GyjRCkwkNw61/Te6LVdAlg==,type:str]
+    lastmodified: "2023-02-17T00:49:47Z"
+    mac: ENC[AES256_GCM,data:7wq3t+s2MOC1aoVsJCqZYIpGt4eQ8Oe76J+tARAMMrjqmtSdBTRE/0972SRdwmqJyytjVUE6P5JQJGkxAROxZwZwuRN0V/Rf0Wp1PTgTU7xIf1FjylfcBCsXZETTaGP2awyxyrPtfG79Rp+lSDgS4BBDkg8WgCD5qG3CRYQnATg=,iv:z6jY6oxs7rjrN+yHd+Hv7/O+HK8MhUiIei60RwJD1fM=,tag:a9g4pmV0ddUgcuQU+boMmQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
