--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:WuO4Jd7v,iv:rrmQrfNHDyaKPOQIxC0mUtzEE0k0zGGHZdXSkTczqxo=,tag:dYar0fBIDlAfhEHhTK3z7Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:Sdzx+7x/,iv:7a+BODsjAnd5xrU9JQM3W14ICmPG6ykc6q1TgmLn2Tg=,tag:YXc2b3IaDq+UwTelDWAlBg==,type:str]
+kind: ENC[AES256_GCM,data:zfK54EvO,iv:raqKcFoZBZQ41ZDZAqZa9pPw6M5yB1M+2LLN+3TjYIk=,tag:huKDVxIAbVHUqh2+3thHww==,type:str]
+ansible_user: ENC[AES256_GCM,data:DZ6B3QWn,iv:BWjaqMRCQK8XgmWww/Z/+IfCN7y9blAu0CcT4Oe5Zdc=,tag:QEsxSBZIuNHRNZkaZDvh1w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2SWlxNFUvR0VrNUE5WjB5
-            RW8wNVBEVDFObzl3RGRqYXY5RFZUTEJPbGpzCkY2dFJHa0tOclQwSkprdmVZc3lu
-            OGhjL3MwNU13a3diWURQdlBRZndPT3cKLS0tIHNqTVA0WjY4bURZK2VvWjdweE9o
-            NXA5OGkwdzBBNm11WS9STFpjcUNVWmcKNE1xRMskLcrkkjZZaoEcW+2JBJmasaNP
-            3nHmnDlp5e9T3khJhAVzNjGQNpAl7o3Ql7MYoq2NO4QsoL+LKOMJBA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYSEtHMlRNaGhlcXNBM0dC
+            OXJuSW1JUE0rR0c2TlNuYlRDdWJpc1phRkRrCmtQQmk5SmxDS2h0OElWRjQvdy8r
+            VUxBcnBVOUtQeGtSaVMrTzJVTlVLNjQKLS0tIFQxNTQ2QVRGak5NeUJ2U1ZjRTB2
+            a25BeTdtWG5oYUNBNzUyZ2M4Smh3ZU0KSGYzj9Uh/zRhaM0BBZVGVEKGIecI/K+g
+            juvlN3AaWWnjH8g+gUq+mFABgVzXc/rMS+YwHBohn5aovkqJI+izCg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-14T04:19:11Z"
-    mac: ENC[AES256_GCM,data:hCrsUUBtdLLVcvI9PvNCZKgCaHFQaMGhJK6bIS1b5A9ZvLuWF24p43Y3uC4T5brYW3SmXg1SwbiJZVgmaovQIuTd/Ghk7/grzvcCK/pp8lkJJ+SoFW3GgTnhJdI2ervHCHJef/M34HFKCzRHpANcVOiXqqKmC4bLYX17FzigmFs=,iv:1xUe8KRH18ONI8SJoZjWkRZ4WhgM9cN3vK9Cbi671Jk=,tag:D/QtRLX9CZfQyplG4/Kgcg==,type:str]
+    lastmodified: "2023-02-17T00:49:47Z"
+    mac: ENC[AES256_GCM,data:WtjYNW1q3JW1a8EUMlz+tWvg/6iUfca/jz29XmV4B5QW0ajsCH4Va8zhS11jVzyfo/9Ns8GF10ikVWotqZmoZcmpcN2Gua6nrD6pw7wi+KNYeGGVkGlAJx30bbBfVuXvn93mQByJ9cWHZvGzGbw3G4z0MHGedvPkyJYmBqU3N24=,iv:ana+mZcMFtKVIVhn5mpTBRuxUJ2Bi5ztXQWvODcB9II=,tag:kRYb07dUgIeWQmtz5u705A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
