--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:q2KmQctf,iv:3Ffx8yzzSQKcnWxMYwhM3J6Z97Q47NnU2q2UnAuSipw=,tag:Xc/9bozG5qeBWCBXUzCHMg==,type:str]
-ansible_user: ENC[AES256_GCM,data:haOdPohr,iv:ivEzrpAZ1d3RtiZ3p9IV7pH0vzNvsDtNlNcYK2+41Y4=,tag:u80hHRKhZigaot2XXiNhTg==,type:str]
+kind: ENC[AES256_GCM,data:vIbTVZ2U,iv:Efzlva2Q9V3dck4VmzmO9nMIM3IXxn9ZjBng5MJZNvo=,tag:vMIIxqoUSJWxMGVZmrPK/A==,type:str]
+ansible_user: ENC[AES256_GCM,data:+rulaFrb,iv:4YkrKx+CR4Z9rnd+u1OvgDq5S5QrutF9Va4yyrL3URw=,tag:algGKAfWYLLBy+DvDbrzBA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNWFBhVnVKd3MrRi8xRFp3
-            WFplSlJVaHVDTGdMY1pVSlRod3JIUGo3YjFFCktvNnBEdkliR3hjWDdtTGRYSEJs
-            RUVETG9LV0hhVkp5a2xrOUJKN3NnY2MKLS0tIGpLSXpDY0lPdXFxMnladk5RSXVm
-            OHg0TmFoblZUaG9ZT2ZtSm1ESUpaelkK8CM7N02VNCJpZ1Pqo/KWQYJTyh95qE5L
-            9blynnkh5smM1aPL3hVeQq1JcRmAwJs3jguLnPcZK8DQrBhfxEn2uQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSYmdLLzMrajVFbEJrcnFJ
+            WnhIc0RQOHoxcUFmeWtRZDU2ZG1lSmJ1cHdVCkMrNUpkRUdKcWV5RDlDc0p1YUN3
+            NUxUeGF5R1Y5aUNzeUR3a2pkTTd3SjAKLS0tIFFGWGRScGFrZ2ppMEZQa0srTEox
+            VnFTWmlDNkVFK0lhcU5SRmJEUStuZ2sKdu8KdWxiDC2kdgENKO4MI0GnlLgIhGtx
+            fb3bvy/3w+06VHitwnC2FvW1hE7xU3BwPvBJ5UbwAH5gxDRbb4iFzQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-14T04:19:11Z"
-    mac: ENC[AES256_GCM,data:Lh8t1uXDcaCT4657m08ZXR8DZnxjVAKOHI40vFH12iP1QNWPUJpjtvjhY9A+0XM1aHIXS2r60tlifBjEZ95jK0PJPz+0hpbCGywTrcMbcdvTPIwbxg5npv8xt/hvsH9aceKJ6h/PL8f93zLidtlk3MXLsj6vYgzOU9rwVibIF80=,iv:2ZOg93ZqJR3viAvSiBKTx7AH35EvqzOuPl0PGnsrn84=,tag:oOQOKr1f94kYQ7051e6FoA==,type:str]
+    lastmodified: "2023-02-17T00:49:47Z"
+    mac: ENC[AES256_GCM,data:0w4JQTuZgWen/imgwV++jyn+bpIurxlqPoZvNN7fbie1IO1PJaRiX1+TYDy29Yn3VjqoXKOgQO9W/EF8zcF9CK0YTyoU/HTO9rIzBhr+Xbke/wD0CVhI+KN1OCn1pIbNMKayNPdQuyc1Ssd/EYxLoCrlljjeQJI3uyp62yxPgn0=,iv:z2QvT8l/HQFcqxffPgHE66JvPN2YCwLWzXRF2C+bXwk=,tag:6WibcKk+4BOvnTRFdRd3ww==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
