--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:MexbXtUXFaVWirK3/1lc4P/hWxcB,iv:hwga6Hg5hjwdfd4UFR7tLKcG5RXypyjRb12G6xB2V20=,tag:F/WoDehgrMwMwWGBsp1qtg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:Bm1JFzwfgzV1JlilTzUBKXfnmnCGQv3OeLP6aTCGrf2JTD3xrg==,iv:MafSp+d4ZL8BZbPU+wZ1kXOT0U9JL2NeUuMD6F1HJGs=,tag:CYh9EyjUKtOjkq1qYMwNPA==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:h+hvSV2i1ikDC48=,iv:A+Twg24J4+Rul3q9RyUrpxGZB40pkIOgbgdpzzR5QMo=,tag:Ro8q1V5tbP70mu8avb1ZAQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:fQEv+iWSuCFUYu063aYe88iyUimc,iv:EsanLjMlOdRgyAYVVhi+dtiKdDKSHRkkGAwGcLKTQSE=,tag:TU3COwOEUe5P6Aijrt3ePQ==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:jhzaY9d0qsfiOydvcGeHJWdkdtiNjZAx3lzyS0lb6MVytCkU6g==,iv:gBibrdRb73hwykSFGdEk0eqkSaQUcDdyZd4g0euZa6A=,tag:8qEJaxOStDyO7xxL0opqew==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:DfnxSPeJ2/mQTds=,iv:BW+S0Ot94td9xBPpu4zEkmsPv94dtckwuQ7I7qcCGW4=,tag:+ibqhoifjYI4k0Ol3k9DNA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZbW5DZmNZYytZY2gycGZY
-            RjR2bCt1WkZQLy9hWjBPK2gxR2lTMlM0YVM4Cmc5YkpVYUVYOUdrNlpwclZpOGly
-            UnJ1QThiajBKYmI4SVllSWJrN2hUczAKLS0tIG5TYWRvQ3RwQ21XV2M2UDhXb0Y1
-            RmJ3N3dpYVRmS0IrcUZvckhsR1prdjQKGwZGvaVNfHgc8FStD4+/6kD194fGuQbS
-            KpB7EO9QGLYAzGqBQqSfG6qMIIEw/n3X3JG4xDUVdh+pXjNzNYQfMA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRd1cwdDVLQURFTDdNTE5p
+            RGszK2N6S25BMm4wd0xweW9DNThPL1lCTEFrClY4a2psK0EwY1JLRHYyUHlwWVQy
+            NVVpVjc4TFA4WjVSekZoTXMzaVNGZTAKLS0tIE9SWlh0M0FHYU5hU2xzM1pmYURI
+            UGwxYmZ5ZWdpZTZObk1FekJYUTQvT3MKNyjFMJy3PjlIvsvuZ8KjVEK62DObj3KA
+            2t3npde86FZ7xZKVYPjx3NbUudS7YUs2hUZ2LSnjmqHgG+NNB3DZdg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-14T04:19:11Z"
-    mac: ENC[AES256_GCM,data:pAcXEnR3TnNY4cQElyIyqbDym0XCEltK5D1xcs+Pxy9qmt46wH1tiZyqnLkhr1CpWdbUUIsJ5mKPRUQhm4TWgp/vKp862+b4ZlWQMjZWdoGffXF26ETlyyB9qcWarfwwLy3RbhhlnzyM1l6+fbLQH0IX/ytYD+ADttqxi0ZF1BI=,iv:DavFSP8ROyJIXn/f/cQz8Pf8sHjCu2neYkhd5B98lFY=,tag:ULzCz80ghzuEzKZv/Ygksw==,type:str]
+    lastmodified: "2023-02-17T00:49:47Z"
+    mac: ENC[AES256_GCM,data:8Xx05D0UcXLSc36vH5vNwAx2dceu/shrRsAgc9dnu2fHNMsA43BUsQXTPS5eQVxpiyV8IvltSbuQifceMD5KSItES6a+U69VBPQ/xDwBQ/gab05qjO1TcC2/1WsuN/K/zMWz1SNFrqyVMeD9bGqun3CNArirxdnoBEgIWDg8tb8=,iv:hxl7kQihq8tb+Df0CEzeuyQOJHkZXjojojTq6+uoTUk=,tag:egITA73Vm48xJ/PVKQ8ccA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
