--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:4vbiix1tWe+8WYU=,iv:Mi+i915h9b7/9D4FO+i+bV5/x+2f3vzN8W6OJ65D5ww=,tag:nC9YD2CG+JwBu++Me8A+pQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DtIQWg/R4my5PKWoJ+Ai8gQX4CJ+,iv:6qGdRMJ2HHK11KlXqHy1jnz1i0NCvrCZJL1RGf54Lxo=,tag:y1i6r/csNSi6FNIAxCHw7g==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:JuOMxLFnFl3Zrv5XVc1adY2nRc0a0S2J1God/8/SI1pGDFpdlFbZoTBE80SK6idRQF0isXK/Kj+0UZeiX8i8z7YkKT2/aS8=,iv:CI+eeKfTVdxM3aOj8Ta8tG2LTTDtASIejbnK+yGprgc=,tag:L1QBU6FTP70wAZGfVkqZzA==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:LdFg9qZp69IIAtXOTWCexLVoK6fK/2zFIWp0dPyOFxMpBz4=,iv:fEWz/QsdvYIw7pC/5Bu3iqs9m8V0/+qoGurZKv19+Y0=,tag:j7g8h5mvFmojqwB0FMR+jg==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:1pzILK3nFg8/mcJFC6e2+LzxCw==,iv:HSuyRvcMXnZ0nmPS4G9to0sTIJmQXgJeT/VHLURLWyo=,tag:9ocfn9gQaVWlC78Jqpb+bg==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:VY6Lwqxy8rItWMdQHfv3+hCqyNFn,iv:JwJzuoP0qngLZULXyh+WDd/H2jIEUHVp8a5JQrjBXmc=,tag:85BkmRlY9tyEKNpCCVUlsg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:FiGo5aUv844=,iv:VNzkV9C0CvYP00dLCSYooVVB6aG7yb7zZD8XWO1AAgw=,tag:UZ5ns+2kutYnxJShK/9YJw==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:Zm/eHHichw4=,iv:lFK3q+iNytz/llbPwL9Kf+HIgIaj1bWKAbpEC8Q4G1w=,tag:Nl9vKTF43Gu08We+A/qklg==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:0sCriyX4CUPHxZq6pGtkc0p+itzKkzJSiIl2gd44OhVgeNYbCiiM7ZDFb1QGxShdDhvr3vjP4mtZ2YOSL/gmyQ==,iv:mf7098r3L2Q2UTMBaS+Wg81CNx/wkubThu9zHZZyR6U=,tag:oRBzOExqEelFJINnoCGweQ==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:sW6XsbtkocplZIqgD2/IfbvB5F1Dcju/FI0OoD7nUYR3T3SS3kgt4jdj+6rDsHQHDnwuzyVRYTT0RsgHJ6VqWg==,iv:yaS1hI4VDpw9qobkv/t90xINqDbdB6vPzZfT10xzWBc=,tag:GlwuqyxbPMacU7xqDjQ+2w==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:mbZ/I2AmdFbH,iv:workq3V+cf3eu2E0pE/PTajU8WPBYgqW23CS7vcWxaM=,tag:5pnhLxqxA5oqv1RepKXaHA==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:77aIuKmqmmvwDtFxTHWZ,iv:4ULaZeMFm2eUzNbPZu6G2KTdGEiSBprmAU9zbBPGf1M=,tag:a/WujxPzZmfTIton9XnYXg==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:hnDgNucqNe7N8VaWhIrsLePwDIhRtqmrPeOQtdGoeq6Qv7g0jQa3eYRNM89/yy9JtcU=,iv:FUZw70zYOFp3FzlQsz8dDdxhaNVhGv+7FQZlBGlul1s=,tag:grOGUtd1Fk+xCVbTZWVy+Q==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:YB6XQh1SMa9eokC0UT4=,iv:/ERI9jwVJTT6sCL19hAyhkCa/mODkMwkRdUPCZU5pks=,tag:Nx5YTKUpE4DrzVP/eVMuzw==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:n27UUKOD0pFdr5kWLicwfXlTxVc=,iv:3PkpQtV2Yg13+1D0ovoAjUcaqO0kmI+f6knQNrXlmD8=,tag:VWYNuFnIMEVAo+PPi9qfzQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:feAGwhveD9E=,iv:+pADpF/rUc5J9qI+Xm7779j8Vb12b8iCsOHv0KOCCdQ=,tag:E7zuWZ5Dup32PLdZdFAnbQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:gBm3iamoMUh4PtFt,iv:hVvw4eM2Kb6+8IcBl+1IbQguwlpnmh5duOxTmltw7zc=,tag:Fjxbz6WPe5rAk42W82cEQQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:xvXp6NQUH1Ot,iv:V4y/znFuHw9x0Fx3f3f3746bBEvj0N56BRiEQiSeW9Q=,tag:NwiE05FG/1ZD3Kb80zkqKg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:303ra44ZPOGw,iv:6c5tlTyxXjmrh8cXxDM7kh8T2AupvkurwmrM7I2n0H0=,tag:0J0KsJG7yU0TtufnHWDvRw==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:62aRXlA+eQ==,iv:zka1bVBTjm1K66KnprICCDf2bXy1FCYcNTHBk+GkbRM=,tag:aqMjs/rZXoTFiy8wKxVUsA==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:WKKAygkW2+oc,iv:UGvv8ULT1FMEcGvnDJzKlRWIzWqEPl/NU4frkdGcQQM=,tag:i2tnmJGV22LUKP3Zah221A==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:qTizZUaPACSHUSU=,iv:JLUsjebSUooXsnvYCkSes2OxO7LTUUmy8VrCnEfIqek=,tag:In2NavLHpxKo4hu5E9VsZA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:xvISDteKBwYbIAjN1rhNHDU3NKhE,iv:l9p7126NPNmSuDnl+xtLps5GoDc2QQwiPFoyYc8LBLc=,tag:zH601TJTUimpGKSDrvUTBQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:ooOlfgAaKkKl7MZyaO2FxeJc8XxmVcPMcfaFXzNAym62IlBxUM8urP8qopyM79FWkvsIcB4ImBwJ1z6PxQIZfEC6Akoqjks=,iv:lFM0GHKR3V55kYMLsIfgOO0/Q27DNedIfW3K0QeaP4s=,tag:Y7Xi8Ss0/Jad4qpIZZLSWQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:vdtVtEDomX4lC0s3IA0HDXz3yOFlzplaRlBx1lfyivT8cT0=,iv:ZJF6xqbG82PbGgwVlF/JjjTiHpkQBu2RCtsNGVkiCwc=,tag:GmqCln/qW5ocFEB/jfXl8A==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:dHNKeumW1hCHYr9wzSkeQoHxYQ==,iv:j/khhkSkjljZNtym/KYYjhR/Zx/kovFCkHBC2nuSlEI=,tag:cV4/cR/r55wLqCZYxt8kvg==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:em9dObYygUha/7YAA5z327qz8Qr5,iv:fbmG/GzKXv3cMxXp80w8dMJ74OJW0IJznyHJp8hEXyU=,tag:yhH97gZipXjxFoHUHxPFFg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:12/tUwQvsQ4=,iv:TORNJRGI7faA4nP+dzn9qpYUhhd1uGAIT9fMgrVIn7w=,tag:gOWrHpf/BNqZS50XWhEMpg==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:H/q8vbENfgQ=,iv:hoGtBOGzASEtmSMC/BlIt+3kLJD7FK2zWLx1qeALqmI=,tag:tisWJSEyH4XZIBWgxQgZCw==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:sispy/vAD2ePpRcFHCR261vsXDhrZCENRLiZ60JdExOREXGQYtBfXRnoLXD3BxufcoXhZyLlDFcZ7kyapBzg2Q==,iv:Bse+7Du63iZSkXIRF7Gj5IqG8MdbevjJHdy+JiR8hAA=,tag:XwYUvpBBnsKI4ojsJbhKIw==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:1bDs81JCGS5KkeYTwlPK1CijWfDEBz2ZRJNn5ja4nUdT0y3Y3c6q5x3BgF36aDp+eAdo+U25Q1daKmABzDNq+w==,iv:2QkttqG4j1hqLMI23vXxQxuV0fAkfks909NONNoBnno=,tag:VfkqFEa0cClDs9XMwEVcgw==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:MKlIeMEs2Lfo,iv:IUVw4srKFX+Gr+R4O521FoSN9gkPLkF6EGP02qls2Vg=,tag:93za6g8T7fbcjB+TBdfQjQ==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:WeNu73qAikonrmmxSjVk,iv:Lu76vhqyYNeR5vG36LQR9xo/cE/LDa9H1K1AE+eGqlk=,tag:1kzg3qoRib5ntjAveT+6sg==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:pZuSDJcBCP80QYZeR6PDMYc5rzpEUcAdDKMjOQoD/V5Czca9Rg0XtbPQorLH0Zdxl8Y=,iv:SkLCVzGwkbFOutwpixtjsGdOk3q1Vk4LbkgUB8oxZUo=,tag:3o8tx2yk5DrnkZCfEaYd1w==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:d//QGFmbb0d+oVB95tw=,iv:ZHAmIDGD1Q+KkBdAmu6NtgQ2Fgs2B0QEW0UmQmYir0k=,tag:M47vGI6WsVAeOTbxd2PAeA==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:ubsTr2GXMW1VpRSXqJ1S9Wmp87A=,iv:Cs5OLyEyVUyghd7KbC/yWQpadU5TISrPuw+4Oe4u+wY=,tag:Aos9sfqXorco8bQ8yCpSEA==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:xVJEWEAsbqU=,iv:JhdFaGHeFCEJx4fVecKrj29haIAs/WU/BmYFXaSrHm8=,tag:ZAK/CsTaiUK6s4zA/UKBFQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:3Sh9/tf53MgHYYab6XN2zsVzydTTKoUHrO7VivLCQAngnYZIUzc=,iv:mllIiUx6HCwFDaWoxask/pw7KmA5mdPc08JdfUUCfAA=,tag:KBJkzuLJ2gnLFNqs5+f0Cw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:agz/mDINMf0=,iv:pAPXfcN7SgNgRLt8g8+vYPeDx2nGkkQ5aeR1skKyCLk=,tag:8026pe1wDNIv17zagGjTTA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:6Lr78b+bxGtD,iv:xyDojx6M2ogVpxDWEIWAbnJLYRhVna/pwDr5Q8tMk48=,tag:KzJdwM4bLjm0RvyPIB6vQQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:8sP2mR31dA==,iv:5Bboh+U/1u8Y3Bt1++bi/WMn5txca82s63Rlg6PRZl4=,tag:x0OaKbGYzUvFpbbrLYglvA==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:CxGhqMVFcDHI,iv:HAZqK3YW6hBIjUmEWToleNybv5CrDaId6SJn1wSLR70=,tag:hYNQkwQB2l8fQD8EL8giHg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4Y245S0UrUVNrV213eXlP
-            WW9PdlFrSERTUWFweERKZUpXejhkR3FDNzNZClJDcGZFNElrZThpdTRVR2pVOElm
-            TkJPOW95L3MyUXJwVWFidmM1VkVTbzgKLS0tIFR2dnhGQk1WRUtaaFZhZVQ4b1Zv
-            R1dGMjBmeCtBMEREcjVlYk5nMFlVbEEK9EeKeA3QbNAqV25eT7P/byNYUW81J+MP
-            HXDS6XfBqEzYaZp0NJf9HIyKiaRhHx56vl5REZOdsdCViGSnUnVkWw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHUVk4TXJGVm96ZGFwZlBu
+            MUJKWFVMMHIwVC9ySFQyUnk5dzRKdzNYUWhvCklCb1BHMjFFbjNiV1BQTGUrc2ZD
+            QXBYQjdETFhLdDRNZEREb1g1NnV3LzgKLS0tIHFTR0pVamtoREQzZXVtQnlTOHVU
+            MVlYMlZFajBsOWFMOHRkMmhmUVg2SmcKtSRFPwnkh/Bu9epoQWAoyp/Cn4mmSaeD
+            OFgZoXZJ/W5ZJvYlbeJ1cri4kUUK2MQTbTjpSpFmb4Z6Yp7U4gfl9A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-14T04:19:11Z"
-    mac: ENC[AES256_GCM,data:Zad6zxcLf8f72BPXaMhHhtgPeyYLIsa5hBn0i+kxDW1qIXCBEr7F9xbFy5mx1hfD2W6K2FDalcd4ZpjFixOaWqGAqz/AMV68ZY8BrEpOItfEXWohSd85S3g6XAfE42by4++oHQsknIhxLoAU05D0DLxo9IlbMKUN+rrDWmpjiJI=,iv:/8xnEaVucuzvg+unuQIAeDq6f4LnBzALmyLraEe9AiE=,tag:xs8d9FaGHQyMdRPRf/n8Mw==,type:str]
+    lastmodified: "2023-02-17T00:49:47Z"
+    mac: ENC[AES256_GCM,data:n791qY8qO7wjuGFZEli1kh9ex34IW1loQBdDkWO4hIqfGobYzI8ne1JijZRKY2nRCcM5aY52rLE3OQoBmvwaqlX35riINc8jiStJY7CPfcO6O9Yha3VWyl1MWDTi4sc+4xdAqspajKy9PUHsNI4Yrd4ir5rxnXrQIbe1wmP1w04=,iv:Ti3SQCkzfT4wwasxwKwfoM2EyBcnV6BOjMq7727Jcg4=,tag:hN4n75CkYJQHm6QOlHUy3w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
