--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:JEPeCKH/,iv:ToEFFD3XvwZtYDQycnnpIEZQ3MIOTBiC8G4RTaWcRrA=,tag:3/t6eEBssZQFGb5EjnUYZg==,type:str]
-ansible_user: ENC[AES256_GCM,data:XID9hupG,iv:kNJJzblCyGuKQbZBHJrwziTlJFJJ1OtNIZSS0HDAAQY=,tag:0kOLQtdlifVcdLUJyTToBw==,type:str]
+kind: ENC[AES256_GCM,data:Y6K9ojfx,iv:53hmCy1E8fnEJQlJk29C0vDP/NqHwZXj/kaIsg/zIqQ=,tag:5MUUd+YIBzs/hJUh4tiPgg==,type:str]
+ansible_user: ENC[AES256_GCM,data:ikxuD510,iv:5Pbd4NcPI/GMFTr12Xq37a/x1uwm0kwM07G+ZTWT+JI=,tag:RU7VYwOj8KF2D6PYjbA4QQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5UmJEZmhVa1JmZ2hwVmNV
-            SVVFVjA0UHFtRExheUZFc1VsM3UzaE1VMkV3CkFBQTViRzg3NzJ5VHVRQ3VicmMz
-            OFplTWtPZnViSmw0RE5jNkFyNTV3b0kKLS0tIGlvQTYvaWo3T2NDZzRKWmFTcnln
-            MmxkbGJGaWNUMEtHSXNyUFJMMTJDM1kK3Wf1qvwDUrNV2XPPUC7vW2vtJNKlWg3u
-            svCWauNZZfqTlTEeUcULEVSwa2tKFI83qkm3N+h3ePDw4KSRQMSfIQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBydVdRTFU2UE9qVk16ZFE5
+            bVljY1o4Y21oM3VnTDVONk1hNERTdGhGakZVCmlTelRZanZMd0tHNjU0enNhQkQ3
+            cXVReTNsL20vZngzNGtxb1duTnc5SXMKLS0tIEswMEVWWHFJV2RoU2Q0M2IzUktq
+            ZTk5emlXU3lzbzAyL3FLTHFqSDhsUHMKqJDrZf6LIQmw/hSBt7OFAdWySkfbWH7U
+            e0LJojhIn0XXp9bDTZ4TapxD+jRB5rLu3ZIoB25yQJIgLUXFFcuX9w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-14T04:19:11Z"
-    mac: ENC[AES256_GCM,data:8Hos0gqyFpne54mkhG7YVwklOYgvQr2B3H+rv7ra8Rf47Rmt8skAIW5AdORsrQvb4eWeVBGyAbghfqb4ttyKKHK0Bj3XkJ9knRYdb6vd7L7ClvBZeUSYll4G2i19Ukeoiaqr+eIsbLUtTeAh4b7O+KxtqfSYt8TG8UtvpWyb2yo=,iv:U2hRfEynXKswyaJK5f/6x8rKDHM2LX25YeG5aKHtV3M=,tag:/N9G+Y5S3g4IXq7EeiHgwA==,type:str]
+    lastmodified: "2023-02-17T00:49:47Z"
+    mac: ENC[AES256_GCM,data:8jfuSWWjsEF45PbYgfMw63g7sYsoqyIzMY2bCQn1s/V98kOU/EXD2pf3rYqY2cvjZI7wgCMSpaMg+2Lf29z4a4z9DArTIH5YmlddgHEyrSRwYb/HmFLDYjx3idk1it1qklCGRdV4xYFGk3qoUmI/9f1Mms0KSSrleoJlcK/uzkw=,iv:7+9tZLMQW/Evci7jhgcDisKka4x0TWYuBdQDHTNfDGM=,tag:NWuq/RdCcnK5VXQDWWvSpg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
