--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:procVWh4,iv:hrpor5paTuv6IaT5JNvA+HNkpMsx2O78vL9Ax3S/dvM=,tag:LvWm8zx1wAsG97G0uOov4g==,type:str]
-ansible_user: ENC[AES256_GCM,data:KHenwCKb,iv:zvYyKQqDJyB5ku38VmCzGrFBwCQ9YjO2uezdMXAwBbc=,tag:Frz0rIrDjnMMH2gtnO1XRg==,type:str]
+kind: ENC[AES256_GCM,data:ySENG78W,iv:4DFvzCfLgWMuTvwCc08mWPArpwaf06WLsjK3SvgKuVU=,tag:Mgq1j+Hcsu0EyAvQ0miq7A==,type:str]
+ansible_user: ENC[AES256_GCM,data:oziXDKaX,iv:m0WnEMob3AyzWh/kRPieiLfg35w8rarz1ECzV3Re3RE=,tag:yGr5XbLB2z/+Mx0PbF3WFw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmeHB3dkhwcTd2WGVPT3Zm
-            eUxqSjIyRzhLeVJ0TkJsUWNMVzhvUUM4dG1zCkE3S1lsS2hjZWJucmhaYm41WjJ4
-            MEZzaWRMc0FZWTUzMjAySEZUc1FydmcKLS0tIFdYeG5TZFBWb0NGTWpaS051dHJS
-            SWNYQ09iK0F1Z05PNnZ2ckJwYSt0cWMKxL2DJbBcm57l4CXlmBrkAz1bmdCzoUKV
-            KUdoI2/7JnCVZiDreRpLbUw19YTgFGMF7bWgRWalPWTBKCGvtz8mog==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSZVBJMWd3cFVVaTRhMHhi
+            Z2MwdmllQVlMQ3FFS1BwenIzZCtodGFIcGlNCjJVUzdaTS9sTy9nM1YwMVBydXIr
+            M3JXTnFaLzEyaDlPVlc3MnFOS21BNkkKLS0tIHVHbXVUT1lZQVFaNDBEWXJGNzRF
+            QjNXR1VIR3Qxell5NWdLcHN6ZURnNk0KGYu/gLOQGf6M+WJRU1W7RiyZbwcN0qAt
+            WrDWNPg7czheNzH8+VdoWs2MGEeQX0p1O4Ow5ZjX/hzATNGqC3MrkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-14T04:19:11Z"
-    mac: ENC[AES256_GCM,data:3qUYIT722KJmLxnCkQ+9iybJCLUHzF47lV6kdtF0hUESyXZkjfHGr4Sg6WL5aik1gTecrdNnmf+3mK1BtMdEiS4Adop9LMKc4dL0xJAAErWu8WdJcdRTFUbFhkoIMCZ1XfXl/TmKJTkW3aKVAryAiPhnHfcbUV1slo1xcu5q9IQ=,iv:WdD4CAfsBkl4xNODIHZ+j4oKktY2XHJZNL7JwMB9iJ4=,tag:T1SKW4cL6sERTwqF53m6Fg==,type:str]
+    lastmodified: "2023-02-17T00:49:47Z"
+    mac: ENC[AES256_GCM,data:+xu95p9VCmR+/OVfPsZmV4EcK4b63uXD+bisbuKqztFOSk2OtI55vEj4SXD6azK45CDqp0narseBXiWV6+GTzgF823VoJykjoxBAs2zm792XoP6MzYfqypkKMh7EWau/WhTupp2Msl7BJrWWE8FtZYHVfX8tpr6gvLfOnw4JFbI=,iv:db95/5F41OxZhI96oJSzmbj+pr3TR09q+V0Q34ndE9Q=,tag:L2nhH69uX/SK1ApiIo4cAA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
